[tool.poetry]
name = "lstm-time-series"
version = "0.1.0"
description = ""
authors = ["MonikaVen <monika.venckauskaite@gmail.com>"]
readme = "README.md"
packages = [{include = "lstm_time_series"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
